<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EditRecipe"
    android:padding="15dp"
    android:layout_margin="15dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/edtRecipeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/edit_recipe"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            />
        <ImageButton
            android:id="@+id/bacBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/back_arrow"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/edtRecipeImgTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bacBtn"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/edit_recipe_image"
            />
        <ImageView
            android:id="@+id/edtRecipeImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/edtRecipeImgTxt"
            android:layout_marginTop="5dp"
            android:src="@drawable/upload_recipe_image"
            android:background="@drawable/rounded_image"
            android:scaleType="center"
            android:layout_centerHorizontal="true"

            />
        <TextView
            android:id="@+id/newRecipeNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtRecipeImg"
            android:layout_marginTop="15dp"
            android:text="@string/new_recipe_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <EditText
            android:id="@+id/newRecipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:padding="15dp"
            android:layout_below="@+id/newRecipeNameTxt"
            android:background="@drawable/custom_edittxt"
            android:hint="New Recipe Name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/recipe_name"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            />
        <TextView
            android:id="@+id/newRecipeTypeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newRecipeName"
            android:layout_marginTop="15dp"
            android:text="New Recipe Type"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newRecipeType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newRecipeTypeTxt"
            app:hintEnabled="false">
        <AutoCompleteTextView
            android:drawableLeft="@drawable/recipe_type"
            android:id="@+id/edtRecipeType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/custom_edittxt"
            android:drawablePadding="10dp"
            android:inputType="none"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/newCookingTimeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newRecipeType"
            android:layout_marginTop="15dp"
            android:text="New Cooking Time"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <EditText
            android:id="@+id/newCookingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:padding="15dp"
            android:layout_below="@+id/newCookingTimeTxt"
            android:background="@drawable/custom_edittxt"
            android:hint="Enter New Cooking Time"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/recipe_time"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            />
        <TextView
            android:id="@+id/newDifficultyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newCookingTime"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="Difficulty :"
            />
        <RadioGroup
            android:id="@+id/newDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newCookingTime"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/newDifficultyText"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            >
            <RadioButton
                android:id="@+id/radioEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Easy"
                android:paddingRight="20dp"
                />

            <RadioButton
                android:id="@+id/radioModerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Moderate"
                android:paddingRight="20dp"/>

            <RadioButton
                android:id="@+id/radioHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hard"
                />
        </RadioGroup>
        <TextView
            android:id="@+id/edtIngredientsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newDifficultyText"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="Ingredients"
            />
        <RelativeLayout
            android:id="@+id/edtIngredientsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtIngredientsTxt"
            >

        <EditText
            android:id="@+id/edtIngredients"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittxt"
            android:inputType="textMultiLine"
            android:hint="new ingredients"
            android:padding="15dp"
            android:gravity="top"
            android:layout_toLeftOf="@id/addIngredientsBtn"
            />
            <ImageButton
            android:id="@+id/addIngredientsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:layout_alignParentEnd="true"
            />
        </RelativeLayout>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/edtChipGroupIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtIngredientsLayout"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/edtDescriptionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtChipGroupIngredients"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="Description"
            />
        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/edtDescriptionTxt"
            android:background="@drawable/custom_edittxt"
            android:inputType="textMultiLine"
            android:hint="new description"
            android:padding="15dp"
            android:gravity="top"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editRecipeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtDescription"
            android:layout_marginTop="15dp"
            android:text="Save"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/custom_start_button"
            android:layout_marginBottom="10dp"
            />
        <ProgressBar
            android:id="@+id/editRecipeProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editRecipeBtn"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            />
    </RelativeLayout>


</ScrollView>